# stock_data_sync

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md
src/server/: README.md  alembic.ini  pyproject.toml
src/server/alembic/: env.py
src/server/alembic/versions/: 20260719_0001_control_plane.py  20260719_0002_create_business_schema.py  20260719_0003_provider_request_log.py  20260719_0004_operation_command.py  20260719_0005_ths_theme_indices.py  20260719_0006_scheduled_job_management.py  20260719_0007_scheduler_execution_retention.py  20260720_0009_processing_warning.py  (+6 more)
src/server/app/: __init__.py  main.py
src/server/tests/: test_acquisition_capacity.py  test_acquisition_executor.py  test_acquisition_planner.py  test_acquisition_recovery.py  test_backup.py  test_board_moneyflow_processor.py  test_business_models.py  test_catalog_specs.py  test_data_sync_alerts.py  test_etf_processor.py  test_health.py  test_logging.py  test_market_query_service.py  test_mcp_read_only_database.py  test_operation_command_planning.py  test_operations_repository.py  test_operations_schemas.py  test_operations_service.py  test_partitions.py  test_processing_planning.py  test_processing_transforms.py  test_rate_limit.py  test_raw_assets.py  test_runtime_models.py  test_scheduler.py  test_scheduler_deferred_stages.py  test_scheduler_lock.py  test_scheduler_master_jobs.py  test_staging.py  test_stock_daily_processor.py  test_system_service.py  test_topics_processor.py  test_trade_calendar_processor.py  test_tushare_catalog.py  test_tushare_provider.py  test_worker_runtimes.py
(+262 files in other folders)
