[project]
name = "stock-data-sync-server"
version = "0.1.0"
description = "Stock data synchronization server"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic>=1.14,<2",
  "apscheduler>=3.11,<4",
  "fastapi>=0.115,<1",
  "prometheus-client>=0.22,<1",
  "psycopg[binary,pool]>=3.2,<4",
  "pydantic-settings>=2.7,<3",
  "requests>=2.32,<3",
  "sqlalchemy[asyncio]>=2.0,<3",
  "structlog>=24.4,<26",
  "tenacity>=9,<10",
  "tushare>=1.4,<2",
  "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true

[[tool.mypy.overrides]]
module = ["apscheduler.*", "tushare.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
